Bug 329805 - After disabling all "local subscriptions" and restarting kmail akonadi_imap_resource always crashes
Summary: After disabling all "local subscriptions" and restarting kmail akonadi_imap_r...
Status: RESOLVED FIXED
Alias: None
Product: Akonadi
Classification: Frameworks and Libraries
Component: IMAP resource (other bugs)
Version First Reported In: 4.12
Platform: openSUSE Linux
: NOR crash
Target Milestone: ---
Assignee: Christian Mollekopf
URL:
Keywords: drkonqi
: 331678 (view as bug list)
Depends on:
Blocks:
 
Reported: 2014-01-10 12:52 UTC by squan
Modified: 2014-05-20 23:12 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description squan 2014-01-10 12:52:59 UTC
Application: akonadi_imap_resource (4.12)
KDE Platform Version: 4.12.0
Qt Version: 4.8.5
Operating System: Linux 3.11.6-4-desktop x86_64
Distribution: "openSUSE 13.1 (Bottle) (x86_64)"

-- Information about the crash:
- What I was doing when the application crashed:
1) Disabled several "local subscriptions" of an IMAP account in kmail
Result:
 -  All mail folders of this mail account disappeared from the kmail tree view.
 - The "server subscription" list became inaccessible
2) Restarted kmail 
Result:
 - akonadi_imap_resource continuously crashes
3) akonadi_ctl restart does not resolve the problem, but reports
plasma-desktop(9415)/libakonadi Akonadi::SessionPrivate::socketError: Socket error occurred: "QLocalSocket: Remote closed" 
on startup (before "KCrash: Application 'akonadi_imap_resource' crashing")

As a result _all_ my IMAP accounts are inaccessible now.

The crash can be reproduced every time.

-- Backtrace:
Application: inchron vom Typ IMAP-E-Mail-Server (akonadi_imap_resource), signal: Segmentation fault
Using host libthread_db library "/lib64/libthread_db.so.1".
[Current thread is 1 (Thread 0x7f82edecf880 (LWP 15845))]

Thread 2 (Thread 0x7f82d9de5700 (LWP 15890)):
#0  0x00007f82e85e4ffa in ?? () from /usr/lib64/libglib-2.0.so.0
#1  0x00007f82e85e52b9 in g_mutex_unlock () from /usr/lib64/libglib-2.0.so.0
#2  0x00007f82e85a54bd in ?? () from /usr/lib64/libglib-2.0.so.0
#3  0x00007f82e85a570c in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#4  0x00007f82ed2e3d76 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/libQtCore.so.4
#5  0x00007f82ed2b5d0f in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/libQtCore.so.4
#6  0x00007f82ed2b6005 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/libQtCore.so.4
#7  0x00007f82ed1b4fef in QThread::exec() () from /usr/lib64/libQtCore.so.4
#8  0x00007f82ed1b768f in ?? () from /usr/lib64/libQtCore.so.4
#9  0x00007f82e910b0db in start_thread () from /lib64/libpthread.so.0
#10 0x00007f82e987890d in clone () from /lib64/libc.so.6

Thread 1 (Thread 0x7f82edecf880 (LWP 15845)):
[KCrash Handler]
#6  QSharedDataPointer (o=..., this=0x7fffa3d70020) at /usr/include/QtCore/qshareddata.h:93
#7  assignEntityPrivate (one=..., other=...) at /usr/src/debug/kdepimlibs-4.12.0/akonadi/entity.cpp:49
#8  0x00007f82ed91a3f5 in Akonadi::Entity::Entity (this=0x7fffa3d70080, other=...) at /usr/src/debug/kdepimlibs-4.12.0/akonadi/entity.cpp:55
#9  0x000000000041dd64 in _start ()

Possible duplicates by query: bug 325911, bug 323883, bug 323115, bug 322413, bug 320611.

Reported using DrKonqi
Comment 1 Christian Mollekopf 2014-03-25 09:31:05 UTC
*** Bug 331678 has been marked as a duplicate of this bug. ***
Comment 2 Christian Mollekopf 2014-05-07 15:36:14 UTC
I tried reproducing this but failed with current master (4.14). Please reopen if you can reproduce it in 4.14
Comment 3 Christian Mollekopf 2014-05-08 08:43:38 UTC
Git commit e376267dda6972ffc2eeea215901f08145e3c993 by Christian Mollekopf.
Committed on 08/05/2014 at 08:42.
Pushed by cmollekopf into branch 'KDE/4.13'.

IMAP-Resource: Don't crash if IDLE collection is not subscribed locally.

M  +13   -12   resources/imap/imapresource.cpp

http://commits.kde.org/kdepim-runtime/e376267dda6972ffc2eeea215901f08145e3c993
Comment 4 Christian Mollekopf 2014-05-20 23:12:52 UTC
Git commit 5e8808a6e2eb7171b8aafeeb0f553a8e89ae3a8f by Christian Mollekopf.
Committed on 08/05/2014 at 15:18.
Pushed by cmollekopf into branch 'kolab/integration/4.13.0'.

IMAP-Resource: Don't crash if IDLE collection is not subscribed locally.

M  +12   -11   resources/imap/imapresource.cpp

http://commits.kde.org/kdepim-runtime/5e8808a6e2eb7171b8aafeeb0f553a8e89ae3a8f