IMAP-Resource: Don't crash if IDLE collection is not subscribed locally.

BUG: 329805